syntax = "proto3";


option java_package = "com.memes.model.transport";

option java_multiple_files = true;

enum OperationType{
  DELETE = 0;
  CACHE = 1;
}

message ControlMessage {
  string  id = 1;
  int64 timestamp = 2;
  string  sourceNode = 3;
  OperationType operation = 4;
  bytes data = 5;
}